# TomTicket_bot

./: Makefile  pyproject.toml  requirements.txt
tests/: test_dialog.py  test_whatsapp_tomticket.py
whatsapp_tomticket/: app.py
whatsapp_tomticket/ext/config/: __init__.py
whatsapp_tomticket/ext/extract_data/: __init__.py
whatsapp_tomticket/ext/tom_ticket_api/: __init__.py
whatsapp_tomticket/ext/trat_data/: __init__.py
whatsapp_tomticket/ext/verfications/: __init__.py
whatsapp_tomticket/templates/: __init__.py
